Archive2/af/3f12df90c0be71/output
main.cpp: In function 'char* readTheFile()':
main.cpp:5:2: error: 'ifstream' was not declared in this scope
  ifstream myfile;
  ^
main.cpp:6:2: error: 'myfile' was not declared in this scope
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
  ^
main.cpp:6:29: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                             ^
main.cpp:6:39: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                                       ^
main.cpp:6:50: error: 'ios' has not been declared
  myfile.open("my16gigfile", ios::in | ios::out | ios::binary);
                                                  ^
